--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./signin.css">
+    <link rel="stylesheet" href="./style/style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Javascript only -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -17,64 +18,60 @@
 
 <body class="text-center">
     <main class="form-signin">
-        <img class="mb-4" src="./kisspng-churras.png" alt="" width="200" height="200">
-        <h1 class="h3 mb-3 fw-normal">Churrascometro</h1>
+        <form>
+            <img class="mb-4" src="./assets/kisspng-churras.png" alt="" width="150" height="150">
+            <h1 class="h3 mb-3 fw-normal">Churrascometro</h1>
 
-        <div class="form-floating">
-            <input type="number" class="form-control" id="adultos" name="adultos" placeholder="Adultos">
-            <label for="floatingInput">Adultos</label>
-        </div>
-        <div class="form-floating">
-            <input type="number" class="form-control" id="floatingInput" id="criancas" name="criancas"
-                placeholder="Crianças">
-            <label for="floatingInput">Crianças</label>
-        </div>
-        <div class="form-floating">
-            <input type="number" class="form-control" id="duracao" name="duracao" placeholder="Duração em horas">
-            <label for="floatingInput">Duração em horas</label>
-        </div>
+            <div class="form-floating">
+                <input type="number" class="form-control" id="adultos" name="adultos" placeholder="Adultos">
+                <label for="floatingInput">Adultos</label>
+            </div>
+            <div class="form-floating">
+                <input type="number" class="form-control" id="criancas" name="criancas" placeholder="Crianças">
+                <label for="floatingInput">Crianças</label>
+            </div>
+            <div class="form-floating">
+                <input type="number" class="form-control" id="duracao" name="duracao" placeholder="Duração em horas">
+                <label for="floatingInput">Duração em horas</label>
+            </div>
 
-        <button class="w-100 btn btn-lg btn-primary" type="button" data-bs-toggle="modal"
-            data-bs-target="#exampleModal">Calcular</button>
+            <button class="w-100 btn btn-lg btn-primary" type="button" data-bs-toggle="modal"
+                data-bs-target="#exampleModal" onclick="calcular()">Calcular</button>
+            <button class="w-100 btn btn-lg btn-primary" type="reset" id="reset">Reset</button>
+        </form>
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content rounded-6 shadow">
                     <div class="modal-body p-5">
-                        <h2 class="fw-bold mb-0">What's new</h2>
+                        <h2 class="fw-bold mb-0">Para a realização desse churrasco é necessário comprar:</h2>
 
                         <ul class="d-grid gap-4 my-5 list-unstyled">
                             <li class="d-flex gap-4">
                                 <svg class="bi text-muted flex-shrink-0" width="48" height="48">
                                     <use xlink:href="#grid-fill" />
                                 </svg>
-                                <div>
-                                    <h5 class="mb-0">Grid view</h5>
-                                    Not into lists? Try the new grid view.
+                                <div id="divCarne">
                                 </div>
                             </li>
                             <li class="d-flex gap-4">
                                 <svg class="bi text-warning flex-shrink-0" width="48" height="48">
                                     <use xlink:href="#bookmark-star" />
                                 </svg>
-                                <div>
-                                    <h5 class="mb-0">Bookmarks</h5>
-                                    Save items you love for easy access later.
+                                <div id="divCerveja">
                                 </div>
                             </li>
                             <li class="d-flex gap-4">
                                 <svg class="bi text-primary flex-shrink-0" width="48" height="48">
                                     <use xlink:href="#film" />
                                 </svg>
-                                <div>
-                                    <h5 class="mb-0">Video embeds</h5>
-                                    Share videos wherever you go.
+                                <div id="divBebida">
                                 </div>
                             </li>
                         </ul>
-                        <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Great,
-                            thanks!</button>
+                        <button type="reset" class="btn btn-lg btn-primary mt-5 w-100"
+                            data-bs-dismiss="modal">Obrigado!</button>
                     </div>
                 </div>
             </div>
@@ -85,7 +82,7 @@
 
 
 
-    <script src="./script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
