--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
                                 <svg class="bi text-muted flex-shrink-0" width="48" height="48">
                                     <use xlink:href="#grid-fill" />
                                 </svg>
-                                <div id="divCarne" class="modal-body p-5">
+                                <div id="divCarne">
                                 </div>
                             </li>
                             <li class="d-flex gap-4">
                                 <svg class="bi text-warning flex-shrink-0" width="48" height="48">
                                     <use xlink:href="#bookmark-star" />
                                 </svg>
-                                <div id="divCerveja" class="modal-body p-5">
+                                <div id="divCerveja">
                                 </div>
                             </li>
                             <li class="d-flex gap-4">
                                 <svg class="bi text-primary flex-shrink-0" width="48" height="48">
                                     <use xlink:href="#film" />
                                 </svg>
-                                <div id="divBebida" class="modal-body p-5">
+                                <div id="divBebida">
                                 </div>
                             </li>
                         </ul>
