--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <button class="w-100 btn btn-lg btn-primary" type="button" data-bs-toggle="modal"
                 data-bs-target="#exampleModal" onclick="calcular()">Calcular</button>
-            <button class="w-100 btn btn-lg btn-primary" type="reset" id="reset">Reset</button>
+            <button class="w-100 btn btn-lg btn-secondary" type="reset" id="reset">Reset</button>
         </form>
 
         <!-- Modal -->
